2004-02-28  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (set_cell_text_bold_if_folder):
	Removed.
	(list_name_data_func): Don't call the function above.
	(list_mtime_data_func): Likewise.

Sun Feb 29 02:34:35 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_position): New 
	function which calculates position and size for the popup in
	list mode. Currently it only pushes the popup horizontally 
	into the screen.

Sun Feb 29 01:10:09 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c: Implement the previous fix in a better way,
	small cleanups.

2004-02-28  Hans Breuer  <hans@breuer.org>

	* gtk/gtkfilesystemwin32.c : applied patch from
	J. Ali Harlow <ali@juiblex.co.uk>, fixes bug #135641

Sat Feb 28 23:30:36 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_popup): Actually resize the
	popup window before popping up.  (#135651)

Sat Feb 28 23:29:35 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_class_init): 
	* gtk/gtkcombobox.c (gtk_combo_box_init): Override the default
	handler for style_set in class_init instead of connecting to
	the signal in init. (noticed by Yosh).

Sat Feb 28 14:48:35 2004  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/main.c (read_line): #ifdef HAVE_FLOCKFILE, 
	not #ifndef HAVE_FLOCKFILE. (#135642, J. Ali Harlow)

2004-02-28  Hans Breuer  <hans@breuer.org>

	* gtk/gtkfilesystemwin32.c : adapt to add -> insert_bookmark
	change. Also merged some crossplatform code from 
	gtkfilesystemunix.c
	* gtk/gtk.def : updated externals

	* gtk/makefile.msc.in : added gtkfilechooserembed.obj

2004-02-28  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkdnd-win32.c : set current_dest_drag to NULL
	when destroying, fixes bug #120007. Also removed the mirrored
	ref counting for deprecated gdk_drag_context_<ref|unref>()
	cause it wasn't reliable anymore anyway.

	* gdk/win32/gdkdisplay-win32.c : fix typo, which should